--- a/webGame/src/main/resources/application.properties
+++ b/webGame/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:3303/webgame
+spring.datasource.url=jdbc:mysql://localhost:3306/webgame?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=my_password_for_root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
